# zxhs

./: .gitignore  README.md  stack.yaml  test.cabal
app/: Main.hs
numberify-image/: numberify-image.cabal
numberify-image/app/: Main.hs
profiles/: 1.prof  2.prof  3.prof  5.crit  6.crit  7.crit  8a-before-unpack.summary  8b.core  README.md
rom-charset/: LICENSE  rom-charset.cabal
rom-charset/app/: Main.hs
src/ZX/: Screen.hs
test/: Spec.hs
trainy-day/: trainy-day.cabal
trainy-day/app/: Main.hs
trainy-day/data/: ld36.pyxel
trainy-day/src/Game/: Logic.hs  RawTiles.hs  Tiles.hs
zxhs/: zxhs.cabal
zxhs/app/: Main.hs
zxhs/profiles/: 8a-lety.core  8b.crit  8b.summary  README.md
zxhs/src/ZX/: Screen.hs
zxhs/src/ZX/Data/: Chars.hs
zxhs/src/ZX/Screen/Monad/: Class.hs  Pure.hs
zxhs/test/: Spec.hs
