name:                test
version:             0.1.0.0
synopsis:            Test ZX Spectrum-like graphics.
description:         Please see README.md
homepage:            https://github.com/githubuser/test#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2016 Robin Palotai
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       ZX.Screen
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , lens
                     , linear
                     , repa
                     , vector
  default-language:    Haskell2010

executable test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , test, sdl2, linear, vector, lens, containers
                     , conduit, conduit-extra, conduit-combinators, conduit-audio
  default-language:    Haskell2010

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test
