name:                numberify-image
version:             0.1.0.0
synopsis:            Tool to generate byte-endcoded sprites from images.
description:         Please see README.md.
homepage:            https://github.com/TreeTide/zxhs/numberify-images
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2016 Robin Palotai
category:            Game, Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable numberify-image
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , JuicyPixels
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TreeTide/zxhs
