name:                rom-charset
version:             0.1.0.0
synopsis:            Tool to generate sprites from ROM charset.
description:         Please see README.md.
homepage:            https://github.com/TreeTide/zxhs/rom-charset
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2016 Robin Palotai
category:            Game, Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rom-charset
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TreeTide/zxhs
