name:                zxhs
version:             0.1.0.0
synopsis:            ZX Spectrum-like graphics emulation using Haskell.
description:         Please see README.md.
homepage:            https://github.com/TreeTide/zxhs#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2016 Robin Palotai
category:            Game, Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       ZX.Screen
                     , ZX.Data.Chars
  ghc-options:         -O2 -funfolding-use-threshold=16 -optc-O3
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , lens
                     , linear
                     , vector
  default-language:    Haskell2010

executable zxhs-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , containers
                     , lens
                     , linear
                     , sdl2
                     , zxhs
                     , vector
  default-language:    Haskell2010

benchmark zxhs-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , criterion
                     , zxhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1 -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TreeTide/zxhs/zxhs
